Added postgresql support to dockerfile and docker-compose

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -45,6 +45,9 @@ RUN apt-get update -qq && \
     apt-get install --no-install-recommends -y curl libsqlite3-0 libvips && \
     rm -rf /var/lib/apt/lists /var/cache/apt/archives
 
+# add postgresql
+RUN apt-get update -qq && apt-get install -y nodejs postgresql-client build-essential
+
 # Copy built artifacts: gems, application
 COPY --from=build /usr/local/bundle /usr/local/bundle
 COPY --from=build /rails /rails
