--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,29 @@ services:
       - 5173:5173
     environment:
       NODE_ENV: development
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    command: bash -c "RAILS_ENV=development bundle exec rails db:migrate && RAILS_ENV=development bundle exec rails db:migrate && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    volumes:
+      - ./backend:/app
+      - ./docker:/app/docker
+    ports:
+      - 3000:3000
+    environment:
+      RAILS_ENV: development
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13.3
+    ports:
+      - 5432:5432
+    volumes:
+      - ./tmp/db:/var/lib/postgresql/data
+    environment:
+      PGDATA: /var/lib/postgresql/data/simcoemath/
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: simcoemath
+      POSTGRES_DB: simcoe-math
