--- a/.github/workflows/lint-and-format.yml
+++ b/.github/workflows/lint-and-format.yml
@@ -28,4 +28,4 @@ jobs:
         run: bun run lint
 
       - name: Check Prettier formatting
-        run: bun run check-format
+        run: bun run prettier --write "src/**/*.{js,ts,vue,css}"
